--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Pawfect Match</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
@@ -39,10 +40,10 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign Up</a>
+          <a class="nav-link" href="#">Sign Up <i class="fas fa-user-plus"></i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="#">Login <i class="fas fa-user"></i></a>
         </li>
       </ul>
     </div>
@@ -55,7 +56,7 @@
           <h1>Pawfect Match</h1>
           <h3>The Only Human-Canine Dating App</h3>
           <hr>
-          <button class="btn btn-light btn-lg">Get Started!</button>
+          <button class="btn btn-light btn-lg"><i class="fas fa-paw"></i> Get Started!</button>
         </div>
       </div>
     </div>
